# fal-rust

./: Cargo.toml  README.md
examples/: stable_diffusion.rs
src/: client.rs  error.rs  utils.rs
