[package]
name = "fal-rust"
version = "0.1.0"
authors = ["Quatton (atomicatives@gmail.com)"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Quatton/fal-rust"
repository = "https://github.com/Quatton/fal-rust"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "stable_diffusion"
path = "examples/stable_diffusion.rs"
